--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="about.html"><img src="icon1.png" width="80" height="80" alt="アイコン画像1">ABOUT</a>
         </div>
         <div class="menu2">
-          <a href="project.html"><img src="icon2.png" width="80" height="80" alt="アイコン画像2">PROJECT</a>
+          <a href="work.html"><img src="icon2.png" width="80" height="80" alt="アイコン画像2">WORK</a>
         </div>
         <div class="menu3">
           <a href="contact.html"><img src="icon3.png" width="80" height="80" alt="アイコン画像3">CONTACT</a>
@@ -115,10 +115,10 @@ let autoPlayInterval;
           </a>
         </div>
         <div class="category2">
-          <a href="project.html">
+          <a href="work.html">
             <img src="Project-sp.png" width="200" height="120" class="project-sp">
             <img src="Project-pc.png" width="240" height="160" class="project-pc">
-            <h3>PROJECT</h3>
+            <h3>WORK</h3>
           </a>
         </div>
         <div class="category3">
