--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
           <a href="about.html"><img src="icon1.png" width="80" height="80" alt="アイコン画像1">ABOUT</a>
         </div>
         <div class="menu2">
-          <a href="project.html"><img src="icon2.png" width="80" height="80" alt="アイコン画像2">PROJECT</a>
+          <a href="work.html"><img src="icon2.png" width="80" height="80" alt="アイコン画像2">WORK</a>
         </div>
         <div class="menu3">
           <a href="contact.html"><img src="icon3.png" width="80" height="80" alt="アイコン画像3">CONTACT</a>
